--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input
           class="input"
           type="text"
-          placeholder="Enter Number"
+          placeholder="Enter a number please"
           id="input"
         />
         <button class="btn" id="btn">Check</button>
@@ -29,5 +29,7 @@
         <p>Number of attempts: <span class="span">0</span></p>
       </div>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
